deploy/envoy/envoy.yaml
static_resources:
  listeners:
    - name: velocity_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: velocity_hcm
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: velocity
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: velocity_proxy
                            timeout: 0s
                            upgrade_configs:
                              - upgrade_type: websocket
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
